# gtask-mcp-server

./: .gitignore  pyproject.toml  setup.sh
.github/workflows/: publish-to-mcp-hive.yml
src/: config.py  main.py  task_client.py
